2005-02-29  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/instrument-notation.teily: moved
	\arpeggio to Basic.

	* Documentation/user/advanced-notation.itely: Articulation to
	Basic, a bunch of stuff from Basic moved to Advanced.

	* Documentation/user/basic.itely: swapped various sections,
	reorganized Basic.

2005-02-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/memory-stream.cc: 
	* flower/libc-extension.cc: Remove obsolete #undefs.

	* flower/include/libc-extension.hh: Bugfix for BSD, place #ifdef
	more carefully.

2005-02-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond.fedora.spec.in (Requires): add GS 8.15 as
	dependency.

	* VERSION (PACKAGE_NAME): release 2.5.13

	* GNUmakefile.in (web-ext): don't ship ps.gz

	* tex/GNUmakefile ($(outdir)/latin1.enc): redirect stderr to
	stdout

2005-02-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/general-scheme.cc (LY_DEFINE): Compile fix for systems
	without libintl.  Now it compiles too.

2005-02-28  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/basic-notation.itely,
	instument-notation.itely, advanced-notation.itely:
	split up contents of notation.itely.

	* Documentation/user/notation.itely: file removed.

	* Documentation/user/invoking.itely, converters.itely:
	moved convert-ly info to invoking.itely.

	* Documentation/user/global.itely, changing-defaults.itely,
	sound-output.itexi: moved global settings, file layout, and
	sound into global.itely.

	* Documentation/user/sound-output.itexi: file removed.

	* Documentation/user/lilypond.tely: removed links to
	notation.itely and sound.itely.

2005-02-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-ps.scm (grob-cause): only do mark_URI if non-empty.

	* scm/framework-ps.scm (write-preamble): remove pdf-viewer code.
 
	* THANKS: add sponsor.

	* scm/define-markup-commands.scm (with-url): new markup command.

	* scm/page-layout.scm (TAGLINE): add www.lilypond.org with URL to
	tagline.
	